* fix mobile web UI bug on form submission * using email keyboard for email fields * removing auto capitalization on fields * adding page headers (h1) for several mobile web pages * removing extra margin for some web pages

--- a/src/main/webapp/css/hp.css
+++ b/src/main/webapp/css/hp.css
@@ -91,7 +91,10 @@
 	height: 690px;
 	background: url(/img/homepage/iPhone5Vancouver3.png) no-repeat left -50px;
 }
-
+.talool .hp .content 
+{
+	margin: 0;
+}
 .hp .platformBenefits, 
 .hp .content 
 {
